--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="p-12">EN<i class="ml-2 fas fa-chevron-down"></i></p>
     </header>
 </section>
-<nav class="navbar navbar-expand-lg justify-content-around navbar-light bg-light">
+<nav class="navbar navbar-expand-lg justify-content-around navbar-light bg-white">
   <div class="container">
    
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -296,7 +296,7 @@
         </div>
     </div>
 </section>
-<section class="container-fluid bg-dark text-white">
+<section class="container-fluid footer bg-dark text-white">
     <div class="container">
         <div class="row py-5">
             <div class="col">
@@ -358,9 +358,26 @@
             </div>
             <div class="col-auto">
                 <p>Sign Up to get your newsletter</p>
+                <div class="md-form">
+                    <input type="email" id="materialLoginFormEmail" class="form-control">
+                    <label for="materialLoginFormEmail">E-mail</label>
+                </div>
             </div>
-            <div class="col-12 w-100 border-bottom" >
-                
+            <div class="col-12 w-100 border-top" >
+                <div class="d-flex row justify-content-end">
+                    <div class="p-2">
+                        <i class="fab fa-facebook-f"></i>
+                    </div>
+                    <div class="p-2">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <div class="p-2">
+                        <i class="fab fa-linkedin-in"></i>
+                    </div>
+                    <div class="p-2">
+                        <i class="fab fa-github"></i>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
