--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav w-100 justify-content-around align-items-center">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="#">HOME</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">ABOUT US</a>
@@ -61,9 +61,9 @@
 <section class="container-fluid" id="home">
   <div class="row">
       <div class="col-lg-12">
-        <p>WELCOME TO</p>
-        <h1>Transcorp Hotel</h1>
-        <small>A place to experience and enjoy the life</small>
+        <p class="p-p">WELCOME TO</p>
+        <h1 class="p-h1">Transcorp Hotel</h1>
+        <small class="p-sm">A place to experience and enjoy the life</small>
       </div>
   </div>
 </section>
@@ -74,25 +74,29 @@
                 <div class="row">
                     <div class="col-lg-3 col-xs-12 px-5 py-3">
                         <div class="border-right align-items-center">
-                            <p>CHECK-IN</p>
-                            <h1>24<small>\JUNE</small></h1>
+                            <p class="p-p6" style="color: #9b9b9b;">CHECK-IN</p>
+                            <p>
+                                <h1 class="p-h1">24<small class="p-p6">\JUNE</small></h1>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-xs-12 py-3 px-lg-0 px-xs-5">
                         <div class="border-right align-items-center">
-                            <p>CHECK-IN</p>
-                            <h1>24<small>\JUNE</small></h1>
+                            <p class="p-p6" style="color: #9b9b9b;">CHECK-IN</p>
+                            <p>
+                                <h1 class="p-h1">24<small class="p-p6">\JUNE</small></h1>
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-xs-12 py-3 px-lg-3 px-xs-5">
                         <div class="align-items-center">
-                            <p>CHECK-IN</p>
-                            <h1>24</h1>
+                            <p class="p-p6" style="color: #9b9b9b;">CHECK-IN</p>
+                            <h1 class="p-h1">24</h1>
                         </div>
                     </div>
                     <div class="col-lg-3 col-xs-12 align-items-center justify-content-center py-3 px-5 dave">
-                        <p>Have a promotional code ?</p>
-                        <button class="btn btn-danger">
+                        <p class="p-p6">Have a promotional code ?</p>
+                        <button class="btn btn-danger p-p6">
                             CHECK AVAILABILITY
                         </button>
                     </div>
@@ -105,9 +109,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="about">
-                <p>ABOUT US</p>
-                <h1>A best place to enjoy your life</h1>
-                <small>
+                <p class="p-p my-5" style="color: #9b9b9b;">ABOUT US</p>
+                <h1 class="p-h1">A best place to enjoy your life</h1>
+                <small class="p-sm my-5" style="color: #9b9b9b;">
                     Transcorp Hilton Hotel is situated in the heart of Nigeria’s Federal Capital Territory, a 40-minute drive from the Nnamdi Azikiwe International Airport in Abuja. It is a 670–room, 5-star hotel that provides luxury accommodation, exotic cuisine, and fully equipped meeting rooms and to business travellers and tourists from all over the world
                 </small>
             </div>
@@ -124,54 +128,54 @@
 <section class="container-fluid long">
     <div class="row">
         <div class="col-lg-12">
-            <div class="view">
-                <p>VIEW MORE PHOTOS</p>
+            <div class="view p-p" style="color: #9b9b9b;">
+                <p><b>VIEW MORE PHOTOS</b></p>
             </div>
         </div>
         <div class="col-lg-12 w-100">
             <div class="row">
                 <div class="col-lg-5 col-xs-12 p-0">
-                    <div class="bg-white w-100 p-5">
-                        <P>DISCOVER OUR ROOMS</P>
-                        <h3>Luxury interior</h3>
-                        <ul class="list-unstyled my-5" style="max-width: 320px; height: 300px; overflow-y: scroll;">
+                    <div class="bg-white w-100 p-5" >
+                        <P class="p-p" style="color: #9b9b9b;">DISCOVER OUR ROOMS</P>
+                        <h3 class="p-h3">Luxury interior</h3>
+                        <ul class="list-unstyled med my-5" style="max-width: 320px; height: 300px; overflow-y: scroll;">
                             <li class="media">
                                 <img class="mr-3" src="img/room.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h5 class="mt-0 mb-1">Classic Room</h5>
-                                    <p><small>Starting from <b>$40.00</b>/Night</small></p>
+                                    <h5 class="mt-0 mb-1 p-md">Classic Room</h5>
+                                    <p><small class="p-p6">Starting from <b>$40.00</b>/Night</small></p>
                                 </div>
                             </li>
                             <hr>
                             <li class="media my-4">
                                 <img class="mr-3" src="img/room.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h5 class="mt-0 mb-1">Grand Deluxe Room</h5>
-                                    <p><small>Starting from <b>$40.00</b>/Night</small></p>
+                                    <h5 class="mt-0 mb-1 p-md">Grand Deluxe Room</h5>
+                                    <p><small class="p-p6">Starting from <b>$40.00</b>/Night</small></p>
                                 </div>
                             </li>
                             <hr>
                             <li class="media">
                                 <img class="mr-3" src="img/room.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h5 class="mt-0 mb-1">Ultra Superior Room</h5>
-                                    <p><small>Starting from <b>$40.00</b>/Night</small></p>
+                                    <h5 class="mt-0 mb-1 p-md">Ultra Superior Room</h5>
+                                    <p><small class="p-p6">Starting from <b>$40.00</b>/Night</small></p>
                                 </div>
                             </li>
                             <hr>
                             <li class="media">
                                 <img class="mr-3" src="img/room.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h5 class="mt-0 mb-1">Ultra Superior Room</h5>
-                                    <p><small>Starting from <b>$40.00</b>/Night</small></p>
+                                    <h5 class="mt-0 mb-1 p-md">Ultra Superior Room</h5>
+                                    <p><small class="p-p6">Starting from <b>$40.00</b>/Night</small></p>
                                 </div>
                             </li>
                             <hr>
                             <li class="media">
                                 <img class="mr-3" src="img/room.jpg" alt="Generic placeholder image">
                                 <div class="media-body">
-                                    <h5 class="mt-0 mb-1">Ultra Superior Room</h5>
-                                    <p><small>Starting from <b>$40.00</b>/Night</small></p>
+                                    <h5 class="mt-0 mb-1 p-md">Ultra Superior Room</h5>
+                                    <p><small class="p-p6">Starting from <b>$40.00</b>/Night</small></p>
                                 </div>
                             </li>
                         </ul>
@@ -184,7 +188,7 @@
         </div>
         <div class="col-lg-12">
             <div class="container my-5">
-                <div class="car w-100 bg-white p-5">
+                <div class="car w-100 bg-white">
                     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                         <ol class="carousel-indicators">
                             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -193,9 +197,9 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active p-5 text-center">
-                                <p>TESTIMONIALS</p>
-                                <h1>What guests Say</h1>
-                                <p><i>
+                                <p class="p-p my-3" style="color: #9b9b9b;">TESTIMONIALS</p>
+                                <h1 class="p-h3 my-4">What guests Say</h1>
+                                <p class="p-lo px-lg-5 px-xs-2"><i>
                                     “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo urna id neque finibus, ac sollicitudin arcu tempus. In hac habitasse platea dictumst”
                                 </i></p>
                                 <p class="text-center my-5">
@@ -203,9 +207,9 @@
                                 </p>
                             </div>
                             <div class="carousel-item p-5 text-center">
-                                <p>TESTIMONIALS</p>
-                                <h1>What guests Say</h1>
-                                <p><i>
+                                <p class="p-p my-3" style="color: #9b9b9b;">TESTIMONIALS</p>
+                                <h1 class="p-h3 my-4">What guests Say</h1>
+                                <p class="p-lo px-lg-5 px-xs-2"><i>
                                     “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo urna id neque finibus, ac sollicitudin arcu tempus. In hac habitasse platea dictumst”
                                 </i></p>
                                 <p class="text-center my-5">
@@ -213,9 +217,9 @@
                                 </p>
                             </div>
                             <div class="carousel-item p-5 text-center">
-                                <p>TESTIMONIALS</p>
-                                <h1>What guests Say</h1>
-                                <p><i>
+                                <p class="p-p my-3" style="color: #9b9b9b;">TESTIMONIALS</p>
+                                <h1 class="p-h3 my-4">What guests Say</h1>
+                                <p class="p-lo px-lg-5 px-xs-2"><i>
                                     “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo urna id neque finibus, ac sollicitudin arcu tempus. In hac habitasse platea dictumst”
                                 </i></p>
                                 <p class="text-center my-5">
@@ -239,15 +243,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 my-5 text-center">
-                        <h1>Latest from our Blog</h1>
+                        <h1 class="p-h3" style="color: #4a4a4a;">Latest from our Blog</h1>
                     </div>
                     <div class="col-lg-4 col-xs-12 my-5">
                         <div class="card">
                             <img src="img/card1.png" class="card-img-top" >                                                        
                             <div class="card-body">
-                                <p>April 10th, 2018</p>
-                                <p class="card-text">Five reasons to  stay at the beautiful Transcorp Hotel</p>
-                                <button class="btn btn-info">Continue</button>
+                                <p class="p-p6" style="color: #9b9b9b;">April 10th, 2018</p>
+                                <p class="card-text p-p6" style="font-family: georgia; color: black;">Five reasons to stay at the beautiful Transcorp Hotel</p>
+                                <a href="#" class="p-p6" style="color: black;">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -255,9 +259,9 @@
                         <div class="card">
                             <img src="img/card2.png" class="card-img-top" >                            
                             <div class="card-body">
-                                <p>April 10th, 2018</p>
-                                <p class="card-text">Five reasons to  stay at the beautiful Transcorp Hotel</p>
-                                <button class="btn btn-info">Continue</button>
+                                <p class="p-p6" style="color: #9b9b9b;">April 10th, 2018</p>
+                                <p class="card-text p-p6" style="font-family: georgia; color: black;">Five reasons to stay at the beautiful Transcorp Hotel</p>
+                                <a href="#" class="p-p6" style="color: black;">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -265,9 +269,9 @@
                         <div class="card">
                             <img src="img/card3.png" class="card-img-top" >                                                        
                             <div class="card-body">
-                                <p>April 10th, 2018</p>
-                                <p class="card-text">Five reasons to  stay at the beautiful Transcorp Hotel</p>
-                                <button class="btn btn-info">Continue</button>
+                                <p class="p-p6" style="color: #9b9b9b;">April 10th, 2018</p>
+                                <p class="card-text p-p6" style="font-family: georgia; color: black;">Five reasons to stay at the beautiful Transcorp Hotel</p>
+                                <a href="#" class="p-p6" style="color: black;">Continue</a>
                             </div>
                         </div>
                     </div>
@@ -283,15 +287,15 @@
         </div>
         <div class="col-lg-5 col-xs-12 p-0">
             <div class="bg-white w-100 p-5">
-                <p class="px-4">DISCOVER OUR ROOMS</p>
-                <h3 class="px-4">Luxury interior</h3>
-                <p class="px-4 mt-5">Abuja,<b>Nigeria.</b></p>
-                <p class="px-4"><small>
+                <p class="px-4 p-p" style="color: #9b9b9b;">DISCOVER OUR ROOMS</p>
+                <h3 class="px-4 p-h3">Luxury interior</h3>
+                <p class="px-4 mt-5 p-g24">Abuja,<b style="color: #9b9b9b;">Nigeria.</b></p>
+                <p class="px-4 p-p6" style="color: #9b9b9b;"><small>
                     Address: 1 Aguiyi Ironsi St, Abuja 900001, Nigeria
                     Email: info@transcorphotelsplc.com
                 </small></p>
-                <p class="px-4 pt-5 mt-5"><small>Call directly;</small></p>
-                <h1 class="px-4">+234 708 060 3000</h1>
+                <p class="px-4 pt-5 mt-5 p-p6" style="color: #9b9b9b;"><small>Call directly;</small></p>
+                <h1 class="px-4 p-h3">+234 708 060 3000</h1>
             </div>
         </div>
     </div>
@@ -321,38 +325,36 @@
             <div class="col">
                 <ul class="list-unstyled">
                     <li class="list-item">
-                        <a href="#" class="nav-link">Site Map</a>
+                        <a href="#" class="nav-link">Our Location</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Terms and Conditions</a>
+                        <a href="#" class="nav-link">Career</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Privacy Policy</a>
+                        <a href="#" class="nav-link">About</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Help</a>
+                        <a href="#" class="nav-link">Contact</a>
                     </li>
-                    <li class="list-item">
-                        <a href="#" class="nav-link">Affiliate</a>
-                    </li>
+                    
                 </ul>
             </div>
             <div class="col">
                 <ul class="list-unstyled">
                     <li class="list-item">
-                        <a href="#" class="nav-link">Site Map</a>
+                        <a href="#" class="nav-link">FAQs</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Terms and Conditions</a>
+                        <a href="#" class="nav-link">Blog</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Privacy Policy</a>
+                        <a href="#" class="nav-link">Car Blog</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Help</a>
+                        <a href="#" class="nav-link">Location</a>
                     </li>
                     <li class="list-item">
-                        <a href="#" class="nav-link">Affiliate</a>
+                        <a href="#" class="nav-link">Press</a>
                     </li>
                 </ul>
             </div>
