last and final touches

--- a/test.html
+++ b/test.html
@@ -13,31 +13,33 @@
     <title>Test|Transcorp</title>
   </head>
 <body style="background: #f5f5f5;">
-<nav class="navbar navbar-expand-lg fixed-top navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#">How It Works</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#">Sign In</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
-    </form>
+<nav class="navbar navbar-expand-lg fixed-top nav-test navbar-light">
+  <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+            <li class="nav-item ">
+                <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="#">How It Works</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="#">Sign In</a>
+            </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign Up</button>
+            </form>
+        </div>
   </div>
 </nav>
 
@@ -48,15 +50,15 @@
             <div class="col-12">
                 <div class="card">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
+                        <li class="list-group-item top">
                             <div class="d-flex row">
                                 <div class="p-2">
                                 <img src="img/ejike.png" height="50px" >
                                 </div>
-                                <div class="p-2 d-inline" >
+                                <div class="px-2 py-4 d-inline pt-14" >
                                     Jhud Ejike
                                 </div>
-                                <div class="p-2 ml-auto">
+                                <div class="px-2 py-3 ml-auto">
                                     <i class="fas fa-tasks"></i>
                                 </div>
                             </div>
@@ -66,7 +68,7 @@
                                 <div class="p-2">
                                     <i class="fas fa-tasks"></i>                            
                                 </div>
-                                <div class="p-2" >
+                                <div class="p-3 pt-10" >
                                     Judejike85@gmail.com
                                 </div>
                             </div>
@@ -76,7 +78,7 @@
                                 <div class="p-2">
                                     <i class="fas fa-tasks"></i>                            
                                 </div>
-                                <div class="p-2" >
+                                <div class="p-3 pt-10" >
                                     Judejike85@gmail.com
                                 </div>
                             </div>
@@ -86,7 +88,7 @@
                                 <div class="p-2">
                                     <i class="fas fa-tasks"></i>                            
                                 </div>
-                                <div class="p-2" >
+                                <div class="p-3 pt-10" >
                                     Judejike85@gmail.com
                                 </div>
                             </div>
@@ -109,16 +111,16 @@
             <div class="col-12 my-2">
                 <div class="card">
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
+                        <li class="list-group-item pt-14">
                             Pending Tasks
                         </li>
                         <li class="list-group-item">
                             <div class="d-flex row">
-                                <div class="p-2">
+                                <div class="p-3 pt-10">
                                     10 Days consecutively
                                 </div>
                                 <div class="p-2 ml-auto">
-                                    <button class="btn border-primary text-primary">
+                                    <button class="btn pt-10 border-primary text-primary">
                                         11 / 13
                                     </button>
                                 </div>
@@ -126,11 +128,11 @@
                         </li>
                         <li class="list-group-item">
                             <div class="d-flex row">
-                                <div class="p-2">
+                                <div class="p-3 pt-10">
                                     10 Days consecutively
                                 </div>
                                 <div class="p-2 ml-auto">
-                                    <button class="btn border-primary text-primary">
+                                    <button class="btn pt-10 border-primary text-primary">
                                         11 / 13
                                     </button>
                                 </div>
@@ -138,11 +140,11 @@
                         </li>
                         <li class="list-group-item">
                             <div class="d-flex row">
-                                <div class="p-2">
+                                <div class="p-3 pt-10">
                                     10 Days consecutively
                                 </div>
                                 <div class="p-2 ml-auto">
-                                    <button class="btn border-primary text-primary">
+                                    <button class="btn pt-10 border-primary text-primary">
                                         11 / 13
                                     </button>
                                 </div>
@@ -150,11 +152,11 @@
                         </li>
                         <li class="list-group-item">
                             <div class="d-flex row">
-                                <div class="p-2">
+                                <div class="p-3 pt-10">
                                     10 Days consecutively
                                 </div>
                                 <div class="p-2 ml-auto">
-                                    <button class="btn border-primary text-primary">
+                                    <button class="btn pt-10 border-primary text-primary">
                                         11 / 13
                                     </button>
                                 </div>
@@ -170,7 +172,7 @@
                             <div class="p-2">
                                 <img src="img/star.svg" >
                             </div>
-                            <div class="p-2">
+                            <div class="p-2 pt-14">
                                 54  Stars earned
                             </div>
                         </div>
@@ -182,10 +184,10 @@
     <div class="col-lg-8 col-xs-12">
         <ul class="nav nav-pills my-3 d-none d-lg-block">
             <div class="row ml-1">
-                <li class="active nav-item col-2"><a class="nav-link" href="#" style="color: white;">Timeline</a></li>
-                <li class="nav-item col-2"><a class="nav-link" href="#">Tasks</a></li>
-                <li class="nav-item col-2"><a class="nav-link" href="#">Followers</a></li>
-                <li class="nav-item col-3 ml-auto"><a class="nav-link btn text-primary border-primary"  href="#">Add Task</a></li>
+                <li class="active nav-item col-2"><a class="nav-link pt-13" href="#" style="color: white;">Timeline</a></li>
+                <li class="nav-item col-2"><a class="nav-link pt-13" href="#">Tasks</a></li>
+                <li class="nav-item col-2"><a class="nav-link pt-13" href="#">Followers</a></li>
+                <li class="nav-item col-3 ml-auto"><a class="nav-link pt-13 btn text-primary border-primary"  href="#">Add Task</a></li>
             
             </div>
         </ul>
@@ -193,7 +195,7 @@
             <li class="active nav-item"><a class="nav-link" href="#" style="color: white;"><i class="fas fa-stream"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-tasks"></i></a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-user-friends"></i></a></li>
-            <li class="nav-item ml-auto"><a class="nav-link btn text-primary border-primary"  href="#">Add Task</a></li>
+            <li class="nav-item ml-auto"><a class="nav-link pt-13 btn text-primary border-primary"  href="#">Add Task</a></li>
         </ul>
         <div class="card">
             <div class="card-body">
@@ -204,11 +206,71 @@
                         <img src="img/angular.png" height="95px">
                     </div>
                     <div class="col-lg-9 col-xs-12" >
-                        <div class="card-title">To code  and deploy my angular app</div>
-                        <p class="card-text">
+                        <div class="card-title pt-17">To code  and deploy my angular app</div>
+                        <p class="card-text pt-14">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
                         </p>
-                        <small>
+                        <small class="pt-10" style="color: #9b9b9b;">
+                            Completed  21 hours ago
+                        </small>
+                    </div>
+                    <div class="col-lg-1 col-xs-12 ml-auto">
+                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-lg-2 col-xs-12 px-4">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
+
+                        <img src="img/angular.png" height="95px">
+                    </div>
+                    <div class="col-lg-9 col-xs-12" >
+                        <div class="card-title pt-17">To code  and deploy my angular app</div>
+                        <p class="card-text pt-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
+                        </p>
+                        <small class="pt-10" style="color: #9b9b9b;">
+                            Completed  21 hours ago
+                        </small>
+                    </div>
+                    <div class="col-lg-1 col-xs-12 ml-auto">
+                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-lg-2 col-xs-12 px-4">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
+
+                        <img src="img/angular.png" height="95px">
+                    </div>
+                    <div class="col-lg-9 col-xs-12" >
+                        <div class="card-title pt-17">To code  and deploy my angular app</div>
+                        <p class="card-text pt-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
+                        </p>
+                        <small class="pt-10" style="color: #9b9b9b;">
+                            Completed  21 hours ago
+                        </small>
+                    </div>
+                    <div class="col-lg-1 col-xs-12 ml-auto">
+                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col-lg-2 col-xs-12 px-4">
+                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
+
+                        <img src="img/angular.png" height="95px">
+                    </div>
+                    <div class="col-lg-9 col-xs-12" >
+                        <div class="card-title pt-17">To code  and deploy my angular app</div>
+                        <p class="card-text pt-14">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
+                        </p>
+                        <small class="pt-10" style="color: #9b9b9b;">
                             Completed  21 hours ago
                         </small>
                     </div>
@@ -225,70 +287,10 @@
                     </div>
                     <div class="col-lg-9 col-xs-12" >
                         <div class="card-title">To code  and deploy my angular app</div>
-                        <p class="card-text">
+                        <p class="card-text pt-14">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
                         </p>
-                        <small>
-                            Completed  21 hours ago
-                        </small>
-                    </div>
-                    <div class="col-lg-1 col-xs-12 ml-auto">
-                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-lg-2 col-xs-12 px-4">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
-
-                        <img src="img/angular.png" height="95px">
-                    </div>
-                    <div class="col-lg-9 col-xs-12" >
-                        <div class="card-title">To code  and deploy my angular app</div>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
-                        </p>
-                        <small>
-                            Completed  21 hours ago
-                        </small>
-                    </div>
-                    <div class="col-lg-1 col-xs-12 ml-auto">
-                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-lg-2 col-xs-12 px-4">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
-
-                        <img src="img/angular.png" height="95px">
-                    </div>
-                    <div class="col-lg-9 col-xs-12" >
-                        <div class="card-title">To code  and deploy my angular app</div>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
-                        </p>
-                        <small>
-                            Completed  21 hours ago
-                        </small>
-                    </div>
-                    <div class="col-lg-1 col-xs-12 ml-auto">
-                        <i style="cursor:pointer" class="fas text-danger fa-trash mt-5"></i>
-                    </div>
-                </div>
-                <hr>
-                <div class="row">
-                    <div class="col-lg-2 col-xs-12 px-4">
-                        <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">                        
-
-                        <img src="img/angular.png" height="95px">
-                    </div>
-                    <div class="col-lg-9 col-xs-12" >
-                        <div class="card-title">To code  and deploy my angular app</div>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed rhoncus nunc. Ut a posuere ante, ac tristique dui. Donec elementum semper enim
-                        </p>
-                        <small>
+                        <small class="pt-10" style="color: #9b9b9b;">
                             Completed  21 hours ago
                         </small>
                     </div>
