--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="#">OUR ROOMS</a>
             </li>
             <li class="nav-item">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="test.html">
                     <img src="img/transcorp-1.jpg" >
                 </a>
             </li>
